Add balise <br/> in div p class desc

--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,13 @@
 *** FONTS ***
 **********************************************/
 
-@import url('https://fonts.googleapis.com/css2?family=Bahiana&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Atomic+Age&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Text+Me+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cabin&family=Lato:wght@300;400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bahiana&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Atomic+Age&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Text+Me+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cabin&family=Lato:wght@300;400&display=swap");
 
 /**********************************************
               *** VARIABLES ***
@@ -16,16 +16,16 @@
 
 :root {
   --color-primary-dark: #1c1e1f;
-  --color-primary: #1F2223;
+  --color-primary: #1f2223;
   --color-primary-light: #44aec9;
-  --color-secondary: #3BD98F;
+  --color-secondary: #3bd98f;
   --color-secondary-light: #55e9a4;
   --color-grey-dark: #777;
   --color-grey: #e1e0e0;
   --color-grey-light: #d4d6d8;
   --color-grey-light-2: #dbdada;
   --color-white: #fff;
-  --color-white-second: #D1CFCC;
+  --color-white-second: #d1cfcc;
 }
 
 /**********************************************
@@ -43,7 +43,7 @@
 
 html {
   font-size: 62.5%;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
@@ -67,7 +67,6 @@ body::-webkit-scrollbar-thumb {
               *** HOME ***
 **********************************************/
 
-
 .home {
   display: flex;
   justify-content: center;
@@ -75,7 +74,6 @@ body::-webkit-scrollbar-thumb {
   height: 100vh;
   background: var(--color-primary);
 }
-
 
 /**********************************************
               *** NAVIGATION ***
@@ -108,11 +106,11 @@ nav {
   text-decoration: none;
   font-weight: 300;
   outline: none;
-  transition: color .3s ease;
-  -webkit-transition: color .3s ease;
-  -moz-transition: color .3s ease;
-  -ms-transition: color .3s ease;
-  -o-transition: color .3s ease;
+  transition: color 0.3s ease;
+  -webkit-transition: color 0.3s ease;
+  -moz-transition: color 0.3s ease;
+  -ms-transition: color 0.3s ease;
+  -o-transition: color 0.3s ease;
 }
 
 .navigation .logo:hover {
@@ -131,11 +129,11 @@ nav {
   text-decoration: none;
   outline-style: none;
   outline: none;
-  transition: all .5s ease;
-  -webkit-transition: all .5s ease;
-  -moz-transition: all .5s ease;
-  -ms-transition: all .5s ease;
-  -o-transition: all .5s ease;
+  transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
   transform: scaleX(0);
   -webkit-transform: scaleX(0);
   -moz-transform: scaleX(0);
@@ -143,8 +141,9 @@ nav {
   -o-transform: scaleX(0);
   transform-origin: left;
   animation: grow-left cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.5s forwards;
-  -webkit-animation: grow-left cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.5s forwards;
-  animation-delay: .8s;
+  -webkit-animation: grow-left cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.5s
+    forwards;
+  animation-delay: 0.8s;
   color: var(--color-white);
 }
 
@@ -177,11 +176,11 @@ nav {
   outline-style: none;
   outline: none;
   border: none;
-  transition: all .3s;
-  -webkit-transition: all .3s;
-  -moz-transition: all .3s;
-  -ms-transition: all .3s;
-  -o-transition: all .3s;
+  transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
   color: var(--color-white);
 }
 
@@ -219,8 +218,8 @@ nav {
 }
 
 .intro-end::after {
-  content: '';
-  height: .5rem;
+  content: "";
+  height: 0.5rem;
   right: 5.8rem;
   top: 7rem;
   position: absolute;
@@ -235,9 +234,9 @@ nav {
 
 .hero-text img {
   width: 5rem;
-  margin-left: .5rem;
+  margin-left: 0.5rem;
   margin-bottom: 1.2rem;
-  cursor: pointer;
+  cursor: grab;
 }
 
 .hero-icon {
@@ -252,21 +251,21 @@ nav {
   display: inline-block;
   -webkit-transform: translate(0, -50%);
   transform: translateX(-50%) translateY(-50%);
-  font: normal 400 20px/1 'Josefin Sans', sans-serif;
-  letter-spacing: .1em;
+  font: normal 400 20px/1 "Josefin Sans", sans-serif;
+  letter-spacing: 0.1em;
   text-decoration: none;
   outline: none;
   padding-top: 70px;
-  transition: all .3s;
-  -webkit-transition: all .3s;
-  -moz-transition: all .3s;
-  -ms-transition: all .3s;
-  -o-transition: all .3s;
+  transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
   color: var(--color-white);
 }
 
 .hero-icon a:hover {
-  opacity: .5;
+  opacity: 0.5;
   margin-bottom: -10px;
 }
 
@@ -339,9 +338,9 @@ nav {
 }
 
 .about__content h1::after {
-  content: '';
-  height: .3rem;
-  left: .5rem;
+  content: "";
+  height: 0.3rem;
+  left: 0.5rem;
   top: 5.5rem;
   position: absolute;
   width: 5.5rem;
@@ -352,7 +351,7 @@ nav {
   max-width: 61.5%;
   font-size: 1.8rem;
   line-height: 2.8rem;
-  letter-spacing: .02rem;
+  letter-spacing: 0.02rem;
   text-align: justify;
   margin: 0 auto;
   margin-top: 15px;
@@ -360,7 +359,7 @@ nav {
 }
 
 .highlith {
-  padding: 0 .2rem;
+  padding: 0 0.2rem;
   background: var(--color-grey-dark);
 }
 
@@ -465,20 +464,20 @@ nav {
   -webkit-transform: translate(0, -50%);
   transform: translateX(-50%) translateY(-50%);
   color: var(--color-white);
-  font: normal 400 20px/1 'Josefin Sans', sans-serif;
-  letter-spacing: .1em;
+  font: normal 400 20px/1 "Josefin Sans", sans-serif;
+  letter-spacing: 0.1em;
   text-decoration: none;
   outline: none;
   padding-top: 70px;
-  transition: all .3s;
-  -webkit-transition: all .3s;
-  -moz-transition: all .3s;
-  -ms-transition: all .3s;
-  -o-transition: all .3s;
+  transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
 }
 
 .about-icon a:hover {
-  opacity: .5;
+  opacity: 0.5;
   margin-bottom: -10px;
 }
 
@@ -541,9 +540,9 @@ nav {
 }
 
 .skill__content h3::after {
-  content: '';
-  height: .3rem;
-  left: .5rem;
+  content: "";
+  height: 0.3rem;
+  left: 0.5rem;
   top: 5.5rem;
   position: absolute;
   width: 5.6rem;
@@ -565,18 +564,18 @@ nav {
 }
 
 .skill__content--stack {
-  font-family: 'Text Me One', sans-serif;
+  font-family: "Text Me One", sans-serif;
   font-size: 2.5rem;
   position: absolute;
   top: 0%;
   left: 2%;
   cursor: pointer;
   color: var(--color-white-second);
-  transition: transform .5s ease-in;
-  -webkit-transition: transform .5s ease-in;
-  -moz-transition: transform .5s ease-in;
-  -ms-transition: transform .5s ease-in;
-  -o-transition: transform .5s ease-in;
+  transition: transform 0.5s ease-in;
+  -webkit-transition: transform 0.5s ease-in;
+  -moz-transition: transform 0.5s ease-in;
+  -ms-transition: transform 0.5s ease-in;
+  -o-transition: transform 0.5s ease-in;
 }
 
 .skill__content--stack:hover {
@@ -586,7 +585,7 @@ nav {
 }
 
 .skill__content--stack:nth-child(1) {
-  font-family: 'Text Me One', sans-serif;
+  font-family: "Text Me One", sans-serif;
   font-size: 2rem;
   position: absolute;
   top: 1rem;
@@ -594,77 +593,77 @@ nav {
 }
 
 .skill__content--stack:nth-child(2) {
-  font-family: 'Bahiana', sans-serif;
+  font-family: "Bahiana", sans-serif;
   position: absolute;
   top: 18rem;
   left: 45rem;
 }
 
 .skill__content--stack:nth-child(3) {
-  font-family: 'Bahiana', sans-serif;
+  font-family: "Bahiana", sans-serif;
   position: absolute;
   top: 11rem;
   left: 32rem;
 }
 
 .skill__content--stack:nth-child(4) {
-  font-family: 'Atomic Age', sans-serif;
+  font-family: "Atomic Age", sans-serif;
   position: absolute;
   top: 19rem;
   left: 15rem;
 }
 
 .skill__content--stack:nth-child(5) {
-  font-family: 'Text Me One', sans-serif;
+  font-family: "Text Me One", sans-serif;
   position: absolute;
   top: 15rem;
   left: 5rem;
 }
 
 .skill__content--stack:nth-child(6) {
-  font-family: 'Major Mono Display', sans-serif;
+  font-family: "Major Mono Display", sans-serif;
   position: absolute;
   top: 17rem;
   left: 31rem;
 }
 
 .skill__content--stack:nth-child(7) {
-  font-family: 'Atomic Age', sans-serif;
+  font-family: "Atomic Age", sans-serif;
   position: absolute;
   top: 1.5rem;
   left: 40rem;
 }
 
 .skill__content--stack:nth-child(8) {
-  font-family: 'Major Mono Display', sans-serif;
+  font-family: "Major Mono Display", sans-serif;
   position: absolute;
   top: 14rem;
   left: 18rem;
 }
 
 .skill__content--stack:nth-child(9) {
-  font-family: 'Bahiana', sans-serif;
+  font-family: "Bahiana", sans-serif;
   position: absolute;
   top: 3rem;
   left: 4rem;
 }
 
 .skill__content--stack:nth-child(10) {
-  font-family: 'Atomic Age', sans-serif;
+  font-family: "Atomic Age", sans-serif;
   position: absolute;
   top: 9rem;
   left: 8rem;
 }
 
 .skill__content--stack:nth-child(11) {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   position: absolute;
   top: 9rem;
   left: 42rem;
 }
 
 .skill__content--stack:nth-child(12) {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   position: absolute;
   top: 5rem;
   left: 23rem;
@@ -738,7 +737,7 @@ nav {
 .project__content .desc {
   font-size: 1.7rem;
   line-height: 2.5rem;
-  letter-spacing: .02rem;
+  letter-spacing: 0.02rem;
   text-align: justify;
   max-width: 85%;
   margin: 1rem 0 0 5rem;
@@ -751,7 +750,7 @@ nav {
   justify-content: start;
   height: 6rem;
   max-width: 100%;
-  margin: .5rem 0 0 5rem;
+  margin: 0.5rem 0 0 5rem;
   padding: 1rem 0;
 }
 
@@ -772,7 +771,7 @@ nav {
   align-items: center;
   height: 6rem;
   max-width: 100%;
-  margin: .5rem 0 0 3rem;
+  margin: 0.5rem 0 0 3rem;
 }
 
 .project__box--link a {
@@ -805,11 +804,11 @@ nav {
   height: 25rem;
   flex: 40% 1;
   opacity: 0.8;
-  transition: opacity .4s ease-out;
-  -webkit-transition: opacity .4s ease-out;
-  -moz-transition: opacity .4s ease-out;
-  -ms-transition: opacity .4s ease-out;
-  -o-transition: opacity .4s ease-out;
+  transition: opacity 0.4s ease-out;
+  -webkit-transition: opacity 0.4s ease-out;
+  -moz-transition: opacity 0.4s ease-out;
+  -ms-transition: opacity 0.4s ease-out;
+  -o-transition: opacity 0.4s ease-out;
 }
 
 .project__illustration:hover {
@@ -837,20 +836,20 @@ nav {
   -webkit-transform: translate(0, -50%);
   transform: translateX(-50%) translateY(-50%);
   color: var(--color-white);
-  font: normal 400 20px/1 'Josefin Sans', sans-serif;
-  letter-spacing: .1em;
+  font: normal 400 20px/1 "Josefin Sans", sans-serif;
+  letter-spacing: 0.1em;
   text-decoration: none;
   outline: none;
   padding-top: 70px;
-  transition: all .3s;
-  -webkit-transition: all .3s;
-  -moz-transition: all .3s;
-  -ms-transition: all .3s;
-  -o-transition: all .3s;
+  transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
 }
 
 .project-icon a:hover {
-  opacity: .5;
+  opacity: 0.5;
   margin-bottom: -10px;
 }
 
@@ -871,7 +870,6 @@ nav {
   box-sizing: border-box;
   z-index: 999;
 }
-
 
 /**********************************************
             *** CONTACT ***
@@ -895,7 +893,6 @@ nav {
   max-width: 100%;
   height: 25rem;
 }
-
 
 .contact-header {
   display: flex;
@@ -926,7 +923,9 @@ nav {
   padding: 10px 30px;
   border-radius: 61px;
   box-shadow: inset 0 0 0 2px var(--color-secondary);
-  transition: 300ms box-shadow cubic-bezier(0.4, 0, 0.6, 1), 300ms background-color cubic-bezier(0.4, 0, 0.6, 1), 300ms color cubic-bezier(0.4, 0, 0.6, 1);
+  transition: 300ms box-shadow cubic-bezier(0.4, 0, 0.6, 1),
+    300ms background-color cubic-bezier(0.4, 0, 0.6, 1),
+    300ms color cubic-bezier(0.4, 0, 0.6, 1);
 }
 
 .contact-button:hover {
@@ -978,9 +977,8 @@ footer {
   color: var(--color-white);
 }
 
-.footer__social{
+.footer__social {
   display: flex;
-  
 }
 
 .footer__contact {
@@ -1007,18 +1005,18 @@ footer {
   padding: 2rem 1rem;
 }
 
-.footer__platform a{
+.footer__platform a {
   outline: none;
   color: var(--color-primary);
 }
 
-.footer__platform img{
-  margin: .5rem .5rem 0;
+.footer__platform img {
+  margin: 0.5rem 0.5rem 0;
   width: 25px;
   height: 25px;
 }
 
-.year{
+.year {
   font-size: 2.5rem;
   color: var(--color-white);
 }
@@ -1046,11 +1044,11 @@ footer {
 }
 
 .btn-animate {
-  transition: all .2s ease-in;
-  -webkit-transition: all .2s ease-in;
-  -moz-transition: all .2s ease-in;
-  -ms-transition: all .2s ease-in;
-  -o-transition: all .2s ease-in;
+  transition: all 0.2s ease-in;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  -ms-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
 }
 
 .btn-animate:hover {
@@ -1109,17 +1107,17 @@ footer {
 
 .fade {
   opacity: 0;
-  animation: fade-in-right ease .5s forwards;
-  -webkit-animation: fade-in-right ease .5s forwards;
+  animation: fade-in-right ease 0.5s forwards;
+  -webkit-animation: fade-in-right ease 0.5s forwards;
 }
 
 .fade {
-  animation-delay: .5s;
+  animation-delay: 0.5s;
 }
 
 .animated {
-  -webkit-animation: moveInBottom .5s ease-out .75s;
-  animation: moveInBottom .5s ease-out .75s;
+  -webkit-animation: moveInBottom 0.5s ease-out 0.75s;
+  animation: moveInBottom 0.5s ease-out 0.75s;
   -webkit-animation-fill-mode: backwards;
   animation-fill-mode: backwards;
   animation-delay: 1s;
@@ -1138,13 +1136,13 @@ footer {
   100% {
     opacity: 1;
     -webkit-transform: translate(0);
-    transform: translate(0)
+    transform: translate(0);
   }
 }
 
 .appearingArrow {
-  -webkit-animation: appearing .5s ease-out .75s;
-  animation: appearing .5s ease-out .75s;
+  -webkit-animation: appearing 0.5s ease-out 0.75s;
+  animation: appearing 0.5s ease-out 0.75s;
   -webkit-animation-fill-mode: backwards;
   animation-fill-mode: backwards;
   animation-delay: 1.1s;
@@ -1157,10 +1155,8 @@ footer {
 
   100% {
     opacity: 1;
-
   }
 }
-
 
 .viber:hover {
   animation: viber 1s ease;
@@ -1205,7 +1201,7 @@ footer {
 }
 
 .bord::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 100%;
   transform: scaleX(0);
@@ -1242,7 +1238,6 @@ footer {
   animation-name: btnExit;
 }
 
-
 /* fadeOutDown */
 @keyframes btnExit {
   from {
@@ -1271,7 +1266,7 @@ footer {
 }
 
 .mouseScroll::before {
-  content: '';
+  content: "";
   display: inline-block;
   width: 4px;
   height: 8px;
@@ -1279,14 +1274,14 @@ footer {
   border-radius: 4px;
   background: var(--color-white);
   animation: scrollWheel 2s infinite;
-  animation-duration: .7s;
+  animation-duration: 0.7s;
   animation-iteration-count: infinite;
   box-sizing: border-box;
 }
 
 .mouseScroll:hover {
   cursor: pointer;
-  opacity: .5;
+  opacity: 0.5;
 }
 
 @keyframes scrollWheel {
